# front-cinepro/src/app/openapi-services/models/authentication-response.ts
@@ -1,6 +1,5 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface AuthenticationResponse {
-  access_token?: string;
-  refresh_token?: string;
+  token?: string;
 }
