# front-cinepro/src/openapi/openapi.json
@@ -1003,10 +1003,7 @@
       "AuthenticationResponse": {
         "type": "object",
         "properties": {
-          "access_token": {
-            "type": "string"
-          },
-          "refresh_token": {
+          "token": {
             "type": "string"
           }
         }
